<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantallas.Informacion"
    >




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/background_app"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="150dp"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/info_1"
            android:textColor="@color/textocards"
            android:fontFamily="@font/monserrat_regular"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/info_2"
            android:textColor="@color/textocards"
            android:fontFamily="@font/monserrat_regular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/info_3"
            android:textColor="@color/textocards"
            android:fontFamily="@font/monserrat_regular"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/info_4"
            android:textColor="@color/textocards"
            android:fontFamily="@font/monserrat_regular"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/info_5"
            android:textColor="@color/textocards"
            android:fontFamily="@font/monserrat_regular"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/monserrat_regular"
            android:gravity="center"
            android:text="@string/info_6"
            android:textColor="@color/textocards"
            android:textSize="15sp" />


    </LinearLayout>




    <LinearLayout
        android:id="@+id/cabecera"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/fondo_curvado"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        >

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/textocards"
            android:fontFamily="@font/monserratsemibolt"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/rotulo2"
            android:layout_marginTop="10dp"/>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>