<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:paddingHorizontal="32dp"
    android:paddingVertical="32dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/informacion"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/cards"
        app:cardCornerRadius="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginBottom="8dp"
                app:srcCompat="@drawable/informacion" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informacion"
                android:textAllCaps="true"
                android:textColor="@color/textocards"
                android:fontFamily="@font/monserratsemibolt"/>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cartera"
        android:layout_width="150dp"
        android:layout_height="242dp"
        app:cardBackgroundColor="@color/cards"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginBottom="8dp"
                app:srcCompat="@drawable/cartera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cartera"
                android:textAllCaps="true"
                android:textColor="@color/textocards"
                android:fontFamily="@font/monserratsemibolt"/>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/empresas"
        android:layout_width="150dp"
        android:layout_height="242dp"
        app:cardBackgroundColor="@color/cards"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/informacion">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:layout_marginBottom="8dp"
                app:srcCompat="@drawable/empresas" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empresas"
                android:textAllCaps="true"
                android:textColor="@color/textocards"
                android:fontFamily="@font/monserratsemibolt"/>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/diagrama"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/cards"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartera">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:layout_marginBottom="8dp"
                app:srcCompat="@drawable/diagrama" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diagrama"
                android:textAllCaps="true"
                android:textColor="@color/textocards"
                android:fontFamily="@font/monserratsemibolt"/>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/rotulo"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/apuestas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rotulo2" />




    <androidx.cardview.widget.CardView
        android:id="@+id/apuestas"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardBackgroundColor="@color/cards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apuestas"
                android:textAllCaps="true"
                android:textColor="@color/textocards"
                android:textSize="32dp"
                android:fontFamily="@font/monserrat"/>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>